<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/sign_in_text"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="@string/user_email_text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userPassword"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:layout_below="@id/userNameEmail"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="15dp"
        android:background="#30ffffff"
        android:hint="@string/password_text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#10a7de"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logIn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signInWith"
        android:layout_above="@id/socialIcons"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_with_text"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/socialIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:gravity="center">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:src="@drawable/googlewhiteicon" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:src="@drawable/facebookwhiteicon" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createUserAccount"
        android:layout_below="@id/socialIcons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-70dp"
        android:text="@string/create_user_account_text"
        android:textSize="17dp"
        android:textColor="#0A67AD"
        android:textStyle="bold" />

</RelativeLayout>