<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.HomeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/whatDoYouWantToCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/what_do_you_want_to_check_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/whatDoYouWantToCheck"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/posts_text"
        android:textColor="@color/white"
        android:backgroundTint="#10a7de" />

    <Button
        android:id="@+id/albums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/posts"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/albums_text"
        android:textColor="@color/white"
        android:backgroundTint="#10a7de"/>

    <Button
        android:id="@+id/toDos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/albums"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/toDos_text"
        android:textColor="@color/white"
        android:backgroundTint="#10a7de"/>

</RelativeLayout>